2009-02-27  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated for 0.11.2.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.c (mud_mccp_decompress): Replaced character
	iteration with g_string_append_len.
	* ui/prefs.glade: Set the left treeview to no expand so the ui on the
	right expands properly.

2009-02-27  Les Harris  <lharris@gnome.org>

	* gnome-mud.schemas.in: Pruned unused keys from schema.
	* plugins/Makefile.am:
	* plugins/automapper/Makefile:
	* plugins/automapper/directions.h:
	* plugins/automapper/map-link.c:
	* plugins/automapper/map.c:
	* plugins/automapper/map.h: Removed old automapper.
	* src/gconf-helper.c (gm_gconf_load_preferences):
	* src/mud-profile.c (mud_profile_finalize),
	(mud_profile_copy_preferences), (mud_profile_gconf_changed): Removed
	code that accessed unused keys.
	* src/mud-window.c (mud_window_init): Removed Quick Connect.
	* ui/Makefile.am: Removed connect.glade.
	* ui/connect.glade: Removed file.
	* ui/main.glade: Removed quick connect from menu.
	* ui/muds.glade: Added space between port spinbutton and connect
	button.

2009-02-27  Les Harris  <lharris@gnome.org>

	* ui/muds.glade: Put the custom connect ui into a GtkExpander.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-preferences-window.c
	(mud_preferences_window_fill_profiles): Preference window now auto
	selects the default functionality pane on opening.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/gconf-helper.c (gm_gconf_load_preferences): Formatting, closed
	leak.
	* src/gnome-mud.c (main): Create .gnome-mud dir.
	* src/modules.c: Closed leak.
	* src/mud-connection-view.c (mud_connection_view_new),
	(mud_connection_view_http_cb): Allocate the mud name into the view.
	* src/mud-parse-trigger.c (mud_parse_trigger_init): Formatting fixes.
	* src/mud-profile.c: Closed memory leaks, formatting changes.
	* src/mud-telnet-msp.c (mud_telnet_msp_parse),
	(mud_telnet_msp_get_files): Completely disabled T parameter,
	formatting.