@@ -1,14 +1,0 @@
-Begin3
-Title:          GNOMEMUD
-Version:        @VERSION@
-Entered-date:   @LSMDATE@
-Description:    GNOME-Mud is a simple mudclient designed for robustness, 
-                speed and trying to get those last mudders off the 
-                windows platform.
-Keywords:       gnome-mud x11 games mud gtk moo mush gnome
-Author:         lobbin@localhost.nu (Robin Ericsson)
-Maintained-by:  lobbin@localhost.nu (Robin Ericsson)
-Primary-site:   http://live.gnome.org/GnomeMud
-Platforms:      Linux Unix X11 GTK GNOME
-Copying-policy: GPL
-End
