@@ -2,6 +2,11 @@
 
 	* NEWS: Updated for 0.11.2.
 
+	* configure.ac: Stop generating a .lsm file for ibiblio.
+	* gnome-mud.lsm.in: Removed.
+
+	* configure.ac: Release gnome-mud 0.11.2.
+
 2009-02-27  Les Harris  <lharris@gnome.org>
 
 	* src/mud-telnet-mccp.c (mud_mccp_decompress): Replaced character
